test/tests/compiler/14_pointers/invalid_types/extra_credit/bitwise_compound_assign_to_pointer.plx
#  No bitwise operations on pointers, including bitwise compound assignment
pub fn main(none) i32 {
    x: i32 = 0
    ptr: *i32 = @x
    ptr &= nil
    return false
}
